多语言部署

--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -1,4 +1,34 @@
 {
+    "public": {
+        "search": "поиск",
+        "page":"титульная страница",
+        "quotes":"Котировки",
+        "trade":"торговля",
+        "mine":"мой",
+        "forget":"Забыл пароль",
+        "email":"Почта",
+        "enter_email":"Пожалуйста, введите адрес электронной почты",
+        "email_code":"Код подтверждения электронной почты",
+        "enter_code":"Пожалуйста, введите код подтверждения электронной почты",
+        "send_code":"Отправить код подтверждения",
+        "new_pass":"Новый пароль",
+        "enter_new_pass":"Пожалуйста, введите новый пароль",
+        "turn_pass":"Подтвердить Пароль",
+        "type_turn":"Пожалуйста, введите новый пароль еще раз",
+        "reset_pass":"сбросить пароль",
+        "inv":"приглашать",
+        "customer":"обслуживание клиентов",
+        "set":"настраивать",
+        "help":"помощь",
+        "help_more":"Вопросы/Рекомендации/Информация",
+        "ann":"объявление",
+        "ann_more":"Новости/События/Информация",
+        "assets":"мои активы",
+        "assets_total_un":"общие активы ок.",
+        "for_u":"сложенный",
+        "up_list":"Список выигрышей",
+        "vol":"количество"
+    },
     "title":{
         "language_set":"Языковые настройки"
     }
