--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,182 @@
 {
-    "title":{
-        "language_set":"Language settings"
+    "public": {
+        "search": "search",
+        "page": "Home",
+        "quotes": "Quotes",
+        "trade": "Trade",
+        "mine": "My",
+        "forget": "Forgot password",
+        "email": "mailbox",
+        "enter_email": "Please enter email address",
+        "email_code": "Email verification code",
+        "enter_code": "Please enter the email verification code",
+        "send_code": "Send verification code",
+        "before_pass": "Original login password",
+        "enter_before": "Please enter the original login password",
+        "new_pass": "New password",
+        "enter_new_pass": "Please enter a new password",
+        "turn_pass": "Confirm password",
+        "type_turn": "Please enter the new password again",
+        "reset_pass": "reset password ",
+        "inv": "invitation",
+        "customer": "customer service",
+        "set": "set up",
+        "help": "help",
+        "help_more": "Questions \/ guidelines \/ materials",
+        "ann": "Notice",
+        "ann_more": "News \/ events \/ information",
+        "assets": "My assets",
+        "assets_total_un": "Total assets (about)",
+        "for_u": "Equivalent",
+        "up_list": "List of gainers",
+        "vol": "amount",
+        "login_pass": "Login password:",
+        "enter_login_pass": "Please enter the login password",
+        "login": "Sign in",
+        "regis_now": "Register now",
+        "bill_list": "Capital flow",
+        "buy": "purchase",
+        "sell": "Sell",
+        "recharge": "Recharge",
+        "withdraw": "Withdraw money",
+        "fee": "Service Charge",
+        "trade_pass": "Transaction password:",
+        "edit_success": "Modified successfully",
+        "confirm": "confirm",
+        "assets_pass": "Fund password",
+        "assets_manage": "asset management",
+        "level_one": "First level friend",
+        "level_two": "Second level friend",
+        "level_three": "Level 3 friend",
+        "inv_total": "Total invitations",
+        "percent_one": "Generation 1: 60%",
+        "percent_two": "Second generation: 30%",
+        "percent_three": "Third generation: 10%",
+        "adv_title": "Details of the incentive system of the promotion scheme",
+        "adv_remarl_1": "If a user invites 10 first-generation friends, his first-generation friends invite 2 second-generation friends, and his second-generation friends invite 5 third-generation friends, the user has 10 first-generation friends, 20 second-generation friends, and 100 third-generation friends. If the average amount of digital currency transactions per person is US $1000 and the handling fee is US $1, then the user's commission income is about 10 * 10 * 60% + 20 * 10 * 30% + 100 * 10 * 10% = US $220.",
+        "adv_remarl_2": "If a user invites 100 first-generation friends, his first-generation friends invite 2 second-generation friends, and his second-generation friends invite 5 third-generation friends, the user has 100 first-generation friends and 200 second-generation friends. If the average amount of digital currency transactions per person is US $1000 and the handling fee is US $8, then the user's Commission income is about 100 * 10 * 60%+",
+        "adv_remarl_3": "200 * 10 * 30% + 1000 * 10 * 10% = US $2200.",
+        "adv_remarl_4": "If a user invites 1000 first-generation friends, his first-generation friends invite 2 second-generation friends, and his second-generation friends invite 5 third-generation friends, the user has 1000 first-generation friends, 2000 second-generation friends, and 10000 third-generation friends. If the average amount of digital currency transactions per person is US $1000, and the handling fee is US $10, Then, the user's commission income is about 1000 * 10 * 60% + 2000 * 10 * 30% + 10000 * 10 * 10% = 22000 US dollars",
+        "inv_mine": "My invitation",
+        "detail": "detailed information",
+        "inv_link": "Invitation link",
+        "click_login": "Click login",
+        "welcome": "Welcome to the 80s",
+        "mine_en": "My commission",
+        "safe_set": "security setting",
+        "people": "people",
+        "end_wait": "As of",
+        "coin": "currency",
+        "select_net": "Select recharge network",
+        "qr_pay": "Scan QR code and transfer in",
+        "recharge_address": "Recharge address",
+        "copy": "copy",
+        "recharge_remark": "Recharge description",
+        "recharge_remark_1": "Please send the corresponding currency you need to recharge through the client or online wallet",
+        "recharge_remark_1_1": "If the amount is sent to this address, other assets will not be recovered.",
+        "recharge_remark_2": "After the sending is completed, the system will automatically recharge the virtual currency to your account on this site after obtaining the corresponding amount of confirmation in this transaction. The corresponding amount of confirmation will take about 0.5 to 1 hour. Please wait patiently. (confirmation number is 2)",
+        "recharge_remark_3": "The same address can be recharged multiple times without affecting the account. The minimum recharge amount is 0.00001.",
+        "safe_auth": "Security verification",
+        "enter_tarde_pass": "Please enter the transaction password",
+        "code": "Verification Code",
+        "cardit": "Actual arrival",
+        "withdraw_pending": "Currency withdrawal application has been initiated",
+        "over_date": "Completion time:",
+        "audit": "Platform review in progress",
+        "withdraw_done": "Withdrawal completed",
+        "withdraw_address": "Withdrawal address",
+        "ok": "good",
+        "view_bill": "View fund flow",
+        "withdraw_detail": "Withdrawal details",
+        "cancel": "cancel",
+        "use_net": "Available networks",
+        "withdraw_num": "Withdrawal quantity",
+        "address_paste": "Enter or long press to paste the withdrawal address",
+        "min": "least",
+        "all": "whole",
+        "use_balance": "Available balance",
+        "withdraw_remark_1": "When withdrawing the currency to the address of this platform, the handling fee is free and the fee is returned to the current account.",
+        "withdraw_remark_2": "In order to ensure the safety of funds, the platform needs to review when you initiate withdrawal. Please wait patiently.",
+        "withdraw_remark_3": "Quantity limit of single withdrawal",
+        "recharge_fiat": "Recharge",
+        "withdraw_fiat": "Withdrawal",
+        "hidden_0": "Currency hidden as 0",
+        "coin_account": "Currency account",
+        "ever_account": "Perpetual account",
+        "search_assets": "Search for assets",
+        "use": "available",
+        "freeze": "frozen",
+        "buy_in": "purchase",
+        "sell_out": "sell out",
+        "way_city": "market order ",
+        "way_limit": "limit order ",
+        "trade_qu": "Trading pair",
+        "select_qu": "Please select a transaction pair",
+        "trade_way": "Transaction direction",
+        "select_way": "Please select the transaction direction",
+        "trade_type": "Transaction type",
+        "select_type": "Please select transaction type",
+        "filter_time": "Start and end time",
+        "start_time": "start time",
+        "end_time": "End time:",
+        "reset": "Reset",
+        "mine_order": "My order",
+        "now_mission": "Current entrustment",
+        "before_mission": "Historical entrustment",
+        "pull_down": "Pull down refresh",
+        "freed_down": "Release refresh",
+        "down_over": "Refresh complete",
+        "optional": "Optional",
+        "deal_order": "Transaction order",
+        "time": "time",
+        "way": "direction",
+        "price": "Price",
+        "num": "quantity",
+        "open": "open",
+        "high": "high",
+        "recive": "collect",
+        "low": "low",
+        "push_op": "Add self selection",
+        "move_op": "Cancel self selection",
+        "regis_welcome": "Registered in the 1980s",
+        "enter_pass": "Please input a password",
+        "real_name": "Real name",
+        "enter_real": "Please enter your real name",
+        "card_num": "ID card No.:",
+        "enter_card": "Please enter your ID number",
+        "up_card": "Upload ID card photo",
+        "up_face_card": "Upload image of identity witness",
+        "up_back_card": "Upload ID card and national emblem",
+        "up_face": "Please upload your face photo",
+        "up_face_pic": "Upload face photos",
+        "submit": "Submit",
+        "verify_card": "Real name authentication",
+        "edit_login_pass": "Change login password",
+        "security": "In order to ensure the safety of your funds, please complete the real name authentication before trading",
+        "safe_center": "Security Center",
+        "about_us": "About us",
+        "ann_center": "Announcement Center",
+        "ann_detail": "Announcement details",
+        "feedback": "Feedback:",
+        "feed_con": "Feedback content:",
+        "feed_remark": "You are welcome to give us your feelings and suggestions on the use of the product. We will handle your valuable opinions as soon as possible. Thank you for your support!",
+        "help_center": "Help center",
+        "help_detail": "Help details",
+        "login_out": "Log out",
+        "set_center": "set focus",
+        "deal_all": "Complete deal",
+        "proces": "have in hand",
+        "mission_total": "Total entrustment",
+        "mission_price": "Entrusted price",
+        "city_price": "market price",
+        "limit_price": "Pending order",
+        "deal_total": "Volume traded",
+        "deal_price": "Average transaction price",
+        "shop": "Shopping Mall",
+        "best_price": "At the best price",
+        "trade_amount": "a turnover"
+    },
+    "title": {
+        "language_set": "Language settings"
     }
 }
