--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -75,7 +75,7 @@
         "recharge_remark_1": "请通过客户端或在线钱包将您需要充值的相应币种",
         "recharge_remark_1_1": "数目发送到该地址，充入其他资产将无法找回。",
         "recharge_remark_2": "发送完成后，系统会自动在此交易获得相应数量确认后将该笔虚拟币充值到您在本站的账户，相应数量的确认需要3大约0.5到1小时时间，请耐心等待。(确认数为2)",
-        "recharge_remark_3": "同一个地址可多次充值，不影响到账。最小充值金额0.00001。",
+        "recharge_remark_3": "同一个地址可多次充值，不影响到账。最小充值金额",
         "safe_auth": "安全验证",
         "enter_tarde_pass": "请输入交易密码",
         "code": "验证码",
@@ -145,8 +145,8 @@
         "card_num":"身份证号码",
         "enter_card":"请输入您的身份证号",
         "up_card":"上传身份证照片",
-        "up_face_card":"上传身份证人像面",
-        "up_back_card":"上传身份证国徽面",
+        "up_face_card":"上传身份证正面",
+        "up_back_card":"上传身份证反面",
         "up_face":"请上传您的脸部照片",
         "up_face_pic":"上传脸部照片",
         "submit":"提交",
