--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -61,7 +61,7 @@
         "detail": "detailed information",
         "inv_link": "Invitation link",
         "click_login": "Click login",
-        "welcome": "Welcome to the 80s",
+        "welcome": "Welcome to the Think",
         "mine_en": "My commission",
         "safe_set": "security setting",
         "people": "people",
@@ -157,7 +157,7 @@
         "about_us": "About us",
         "ann_center": "Announcement Center",
         "ann_detail": "Announcement details",
-        "feedback": "Feedback:",
+        "feedback": "Feedback",
         "feed_con": "Feedback content:",
         "feed_remark": "You are welcome to give us your feelings and suggestions on the use of the product. We will handle your valuable opinions as soon as possible. Thank you for your support!",
         "help_center": "Help center",
