--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -61,7 +61,7 @@
         "detail": "detailed information",
         "inv_link": "Invitation link",
         "click_login": "Click login",
-        "welcome": "Welcome to the Think",
+        "welcome": "Welcome to the BiBi",
         "mine_en": "My commission",
         "safe_set": "security setting",
         "people": "people",
