--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -61,7 +61,7 @@
         "detail": "详细信息",
         "inv_link": "邀请链接",
         "click_login": "点击登录",
-        "welcome": "欢迎来到Think",
+        "welcome": "欢迎来到BiBi",
         "mine_en": "我的委托",
         "safe_set": "安全设置",
         "people": "人",
