--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -1,189 +1,254 @@
 {
     "public": {
         "search": "搜索",
-        "page": "首页",
+        "page": "首頁",
         "quotes": "行情",
         "trade": "交易",
         "mine": "我的",
-        "forget": "忘记密码",
-        "email": "邮箱",
-        "enter_email": "请输入邮箱地址",
-        "email_code": "邮箱验证码",
-        "enter_code": "请输入邮箱验证码",
-        "send_code": "发送验证码",
-        "before_pass":"原登录密码",
-        "enter_before":"请输入原登录密码",
-        "new_pass": "新密码",
-        "enter_new_pass": "请输入新密码",
-        "turn_pass": "确认密码",
-        "type_turn": "请再次输入新密码",
-        "reset_pass": "重置密码",
-        "inv": "邀请",
+        "forget": "忘記密碼",
+        "email": "郵箱",
+        "enter_email": "請輸入郵箱地址",
+        "email_code": "郵箱驗證碼",
+        "enter_code": "請輸入郵箱驗證碼",
+        "send_code": "發送驗證碼",
+        "before_pass": "原登錄密碼",
+        "enter_before": "請輸入原登錄密碼",
+        "new_pass": "新密碼",
+        "enter_new_pass": "請輸入新密碼",
+        "turn_pass": "確認密碼",
+        "type_turn": "請再次輸入新密碼",
+        "type_turn_trade": "請再次輸入交易密碼",
+        "reset_pass": "重置密碼",
+        "inv": "邀請",
         "customer": "客服",
-        "set": "设置",
-        "help": "帮助",
-        "help_more": "问题/指南/资料",
+        "set": "設置",
+        "help": "幫助",
+        "home_help":"幫助",
+        "help_more": "問題/指南/資料",
         "ann": "公告",
-        "ann_more": "新闻/活动/资讯",
-        "assets": "我的资产",
-        "assets_total_un": "总资产约",
+        "home_ann":"公告",
+        "ann_more": "新聞/活動/資訊",
+        "assets": "我的資產",
+        "assets_total_un": "總資產約",
         "for_u": "折合",
-        "up_list": "涨幅榜",
+        "up_list": "漲幅榜",
         "vol": "量",
-        "login_pass": "登录密码",
-        "enter_login_pass": "请输入登录密码",
-        "login": "登录",
-        "regis_now": "立即注册",
-        "bill_list": "资金流水",
-        "buy": "购买",
+        "login_pass": "登錄密碼",
+        "enter_login_pass": "請輸入登錄密碼",
+        "login": "登錄",
+        "regis_now": "立即註冊",
+        "bill_list": "資金流水",
+        "buy": "購買",
         "sell": "售出",
-        "recharge": "充币",
-        "withdraw": "提币",
-        "fee": "手续费",
-        "trade_pass": "交易密码",
+        "recharge": "充幣",
+        "withdraw": "提幣",
+        "fee": "手續費",
+        "trade_pass": "交易密碼",
         "edit_success": "修改成功",
-        "confirm": "确认",
-        "assets_pass": "资金密码",
-        "assets_manage": "资产管理",
-        "level_one": "一级好友",
-        "level_two": "二级好友",
-        "level_three": "三级好友",
-        "inv_total": "邀请总数",
+        "confirm": "確認",
+        "assets_pass": "資金密碼",
+        "assets_manage": "資產管理",
+        "level_one": "一級好友",
+        "level_two": "二級好友",
+        "level_three": "三級好友",
+        "inv_total": "邀請總數",
         "percent_one": "一代:60%",
         "percent_two": "二代:30%",
         "percent_three": "三代:10%",
-        "adv_title": "推广计划奖励制度详情",
+        "adv_title": "推廣計劃獎勵制度詳情",
         "adv_remarl_1": "若用戶邀請了10名-代好友，他的一代好友分別邀請了2名二代好友，他的二代好友分別邀請了5名三代好友，此用戶就擁有10名一代好友，20名二代好友，100名三代好友如果平均每人交易一-次數字貨幣的金額是1000美金，手續費是1美金，那麼此用戶佣金收入約: 10*10*60%+ 20*10*30%+100*10*10% =220美金。",
         "adv_remarl_2": "若用戶邀請了100名一代好友，他的一代好友分別邀請了2名二代好友，他的二代好友分別邀請了5名三代好友，此用戶就擁有100名一代好友，200名二代好友，如果平均每人交易一次數字貨幣的金額是1000美金，手續費是8美金，那麼此用戶佣金收入約: 100*10*60% +",
         "adv_remarl_3": "200*10* 30%+ 1000*10*10% =2200美金。",
         "adv_remarl_4": "若用戶邀請了1000名一代好友，他的一-代好友分別邀請了2名二代好友，他的二代好友分別邀請了5名三代好友，此用戶就擁有1000名一代好友，2000名二代好友，10000名三代好友如果平均每人交易一次數字貨幣的金額是1000美金，手續費是10美金，那麼此用戶佣金收入約1000* 10*60%+ 2000* 10* 30%+ 10000*10* 10%=22000美金",
-        "inv_mine": "我的邀请",
-        "detail": "详细信息",
-        "inv_link": "邀请链接",
-        "click_login": "点击登录",
-        "welcome": "欢迎来到BiBi",
-        "mine_en": "我的委托",
-        "safe_set": "安全设置",
+        "inv_mine": "我的邀請",
+        "detail": "詳細信息",
+        "inv_link": "邀請鏈接",
+        "click_login": "點擊登錄",
+        "welcome": "歡迎來到BiBi",
+        "mine_en": "我的委託",
+        "safe_set": "安全設置",
         "people": "人",
         "end_wait": "截止至",
-        "coin": "币种",
-        "select_net": "选择充值网络",
-        "qr_pay": "扫二维码，转入",
+        "coin": "幣種",
+        "select_net": "選擇充值網絡",
+        "qr_pay": "掃二維碼，轉入",
         "recharge_address": "充值地址",
-        "copy": "复制",
-        "recharge_remark": "充值说明",
-        "recharge_remark_1": "请通过客户端或在线钱包将您需要充值的相应币种",
-        "recharge_remark_1_1": "数目发送到该地址，充入其他资产将无法找回。",
-        "recharge_remark_2": "发送完成后，系统会自动在此交易获得相应数量确认后将该笔虚拟币充值到您在本站的账户，相应数量的确认需要3大约0.5到1小时时间，请耐心等待。(确认数为2)",
-        "recharge_remark_3": "同一个地址可多次充值，不影响到账。最小充值金额",
-        "safe_auth": "安全验证",
-        "enter_tarde_pass": "请输入交易密码",
-        "code": "验证码",
-        "cardit": "实际到账",
-        "withdraw_pending": "提币申请已发起",
-        "over_date": "完成时间",
-        "audit": "平台审核中",
-        "withdraw_done": "提币完成",
-        "withdraw_address": "提币地址",
+        "copy": "複製",
+        "recharge_remark": "充值說明",
+        "recharge_remark_1": "請通過客戶端或在線錢包將您需要充值的相應幣種",
+        "recharge_remark_1_1": "數目發送到該地址，充入其他資產將無法找回。",
+        "recharge_remark_2": "發送完成後，系統會自動在此交易獲得相應數量確認後將該筆虛擬幣充值到您在本站的賬戶，相應數量的確認需要3大約0.5到1小時時間，請耐心等待。(確認數為2)",
+        "recharge_remark_3": "同一個地址可多次充值，不影響到賬。最小充值金額",
+        "safe_auth": "安全驗證",
+        "enter_tarde_pass": "請輸入交易密碼",
+        "code": "驗證碼",
+        "cardit": "實際到賬",
+        "withdraw_pending": "提幣申請已發起",
+        "over_date": "完成時間",
+        "audit": "平台審核中",
+        "withdraw_done": "提幣完成",
+        "withdraw_address": "提幣地址",
         "ok": "好的",
-        "view_bill": "查看资金流水",
-        "withdraw_detail": "提币详情",
+        "view_bill": "查看資金流水",
+        "withdraw_detail": "提幣詳情",
         "cancel": "取消",
-        "use_net": "可用网络",
-        "withdraw_num": "提币数量",
-        "address_paste": "输入或长按粘贴提币地址",
+        "use_net": "可用網絡",
+        "withdraw_num": "提幣數量",
+        "address_paste": "輸入或長按粘貼提幣地址",
         "min": "最少",
         "all": "全部",
-        "use_balance": "可用余额",
-        "withdraw_remark_1": "提币至本平台地址时可免手续费，费用返回至当前账户。",
-        "withdraw_remark_2": "为保障资金安全，当您发起提币时，平台需进行审核，请耐心等待。",
-        "withdraw_remark_3": "单笔提币数量限额",
+        "use_balance": "可用餘額",
+        "withdraw_remark_1": "提幣至本平台地址時可免手續費，費用返回至當前賬戶。",
+        "withdraw_remark_2": "為保障資金安全，當您發起提幣時，平台需進行審核，請耐心等待。",
+        "withdraw_remark_3": "單筆提幣數量限額",
         "recharge_fiat": "充值",
-        "withdraw_fiat": "提现",
-        "hidden_0": "隐藏为0的币种",
-        "coin_account": "币币账户",
-        "ever_account": "永续账户",
-        "search_assets": "搜索资产",
+        "withdraw_fiat": "提現",
+        "hidden_0": "隱藏為0的幣種",
+        "coin_account": "幣幣賬戶",
+        "ever_account": "永續賬戶",
+        "search_assets": "搜索資產",
         "use": "可用",
-        "freeze": "冻结",
-        "buy_in": "买入",
-        "sell_out": "卖出",
-        "way_city": "市价委托",
-        "way_limit": "限价委托",
-        "trade_qu": "交易对",
-        "select_qu": "请选择交易对",
+        "freeze": "凍結",
+        "buy_in": "買入",
+        "sell_out": "賣出",
+        "way_city": "市價委託",
+        "way_limit": "限價委託",
+        "trade_qu": "交易對",
+        "select_qu": "請選擇交易對",
         "trade_way": "交易方向",
-        "select_way": "请选择交易方向",
-        "trade_type": "交易类型",
-        "select_type": "请选择交易类型",
-        "filter_time": "起止时间",
-        "start_time": "开始时间",
-        "end_time": "结束时间",
+        "select_way": "請選擇交易方向",
+        "trade_type": "交易類型",
+        "select_type": "請選擇交易類型",
+        "filter_time": "起止時間",
+        "start_time": "開始時間",
+        "end_time": "結束時間",
         "reset": "重置",
-        "mine_order": "我的订单",
-        "now_mission":"当前委托",
-        "before_mission":"历史委托",
-        "pull_down":"下拉刷新",
-        "freed_down":"释放刷新",
-        "down_over":"刷新完成",
-        "optional":"自选",
-        "deal_order":"成交单",
-        "time":"时间",
-        "way":"方向",
-        "price":"价格",
-        "num":"数量",
-        "open":"开",
-        "high":"高",
-        "recive":"收",
-        "low":"低",
-        "push_op":"添加自选",
-        "move_op":"取消自选",
-        "regis_welcome":"注册80年代",
-        "enter_pass":"请输入密码",
-        "real_name":"真实姓名",
-        "enter_real":"请输入您的真实姓名",
-        "card_num":"身份证号码",
-        "enter_card":"请输入您的身份证号",
-        "up_card":"上传身份证照片",
-        "up_face_card":"上传身份证正面",
-        "up_back_card":"上传身份证反面",
-        "up_face":"请上传您的脸部照片",
-        "up_face_pic":"上传脸部照片",
-        "submit":"提交",
-        "verify_card":"实名认证",
-        "edit_login_pass":"修改登录密码",
-        "security":"为了保障您的资金安全,请完成实名认证后方可进行交易",
-        "safe_center":"安全中心",
-        "about_us":"关于我们",
-        "ann_center":"公告中心",
-        "ann_detail":"公告详情",
-        "feedback":"意见反馈",
-        "feed_con":"反馈内容",
-        "feed_remark":"欢迎您给我们提出产品的使用感受和建议，我们将尽快处理您提交的宝贵意见，感谢您的支持！",
-        "help_center":"帮助中心",
-        "help_detail":"帮助详情",
-        "login_out":"退出登录",
-        "set_center":"设置中心",
-        "deal_all":"完全成交",
-        "proces":"进行中",
-        "mission_total":"委托总量",
-        "mission_price":"委托价格",
-        "city_price":"市价",
-        "limit_price":"挂单",
-        "deal_total":"已成交量",
-        "deal_price":"成交均价",
-        "shop":"商城",
-        "best_price":"以最优价格",
-        "trade_amount":"交易额",
-        "last_8":"登录密码至少8位"
+        "mine_order": "我的訂單",
+        "now_mission": "當前委託",
+        "before_mission": "歷史委託",
+        "pull_down": "下拉刷新",
+        "freed_down": "釋放刷新",
+        "down_over": "刷新完成",
+        "optional": "自選",
+        "deal_order": "成交單",
+        "time": "時間",
+        "way": "方向",
+        "price": "價格",
+        "num": "數量",
+        "open": "開",
+        "high": "高",
+        "recive": "收",
+        "low": "低",
+        "push_op": "添加自選",
+        "move_op": "取消自選",
+        "regis_welcome": "註冊80BiBi",
+        "enter_pass": "請輸入密碼",
+        "real_name": "真實姓名",
+        "enter_real": "請輸入您的真實姓名",
+        "card_num": "身份證號碼",
+        "enter_card": "請輸入您的身份證號",
+        "up_card": "上傳身份證照片",
+        "up_face_card": "上傳身份證正面",
+        "up_back_card": "上傳身份證反面",
+        "up_face": "請上傳您的臉部照片",
+        "up_face_pic": "上傳臉部照片",
+        "submit": "提交",
+        "verify_card": "實名認證",
+        "edit_login_pass": "修改登錄密碼",
+        "security": "為了保障您的資金安全,請完成實名認證後方可進行交易",
+        "safe_center": "安全中心",
+        "about_us": "關於我們",
+        "ann_center": "公告中心",
+        "ann_detail": "公告詳情",
+        "feedback": "意見反饋",
+        "feed_con": "反饋內容",
+        "feed_remark": "歡迎您給我們提出產品的使用感受和建議，我們將盡快處理您提交的寶貴意見，感謝您的支持！",
+        "help_center": "幫助中心",
+        "help_detail": "幫助詳情",
+        "login_out": "退出登錄",
+        "set_center": "設置中心",
+        "deal_all": "完全成交",
+        "proces": "進行中",
+        "mission_total": "委託總量",
+        "mission_price": "委託價格",
+        "city_price": "市價",
+        "limit_price": "掛單",
+        "deal_total": "已成交量",
+        "deal_price": "成交均價",
+        "shop": "商城",
+        "best_price": "以最優價格",
+        "trade_amount": "交易額",
+        "last_8": "登錄密碼至少8位",
+        "last_trade_8": "交易密碼至少8位",
+        "more_share": "更多分享方式",
+        "share_link": "邀請鏈接",
+        "has_no_bill": "暫無流水",
+        "freeze_coin": "提幣凍結",
+        "type": "類型",
+        "balance": "餘額",
+        "load_more": "加載更多",
+        "no_more": "沒有更多了",
+        "reward_rule": "獎勵規則",
+        "un_auth": "未認證",
+        "had_auth": "已認證",
+        "auth_processing": "審核中",
+        "inv_human": "受邀者數量",
+        "inv_amount": "總佣金",
+        "address_manage": "地址管理",
+        "delete": "刪除",
+        "add_address": "添加地址",
+        "use_network": "可用網絡",
+        "address": "地址",
+        "type_address": "輸入或長按粘貼地址",
+        "remark": "備註",
+        "type_address_remark": "輸入該地址備註",
+        "save": "保存",
+        "expand": "展開",
+        "put": "收起",
+        "more": "更多",
+        "country": "國家",
+        "type_country": "請選擇國家地區",
+        "re_upload": "重新上傳",
+        "has_no_entrust": "暫無委託",
+        "trade_cancel": "交易取消",
+        "cancel_entrust": "取消委託",
+        "buy_market": "市價買入",
+        "buy_limit": "限價買入",
+        "sell_market": "市價賣出",
+        "sell_limit": "限價賣出",
+        "pre_deal": "預成交量",
+        "entrust_limit": "限價委託",
+        "entrust_market": "市價委託"
     },
-    "message":{
-        "regis_success":"注册成功,将自动为您转到登录",
-        "reset_success":"重置成功,将自动为您转到登录",
-        "send_code_success":"验证码发送成功",
-        "pass_failed":"两次密码不一致"
+    "message": {
+        "regis_success": "註冊成功,將自動為您轉到登錄",
+        "reset_success": "重置成功,將自動為您轉到登錄",
+        "send_code_success": "驗證碼發送成功",
+        "pass_faild": "兩次密碼不一致",
+        "copy_success": "Copy成功",
+        "login_faild": "登錄異常，請稍後再試",
+        "login_success": "登錄成功",
+        "copy_address": "地址複製成功",
+        "withdraw_application": "提幣申請成功",
+        "type_address": "請輸入提幣地址",
+        "type_withdraw_amount": "請輸入提幣金額",
+        "withdraw_limit_faild": "未滿足最少提幣數量",
+        "need_trade_pass": "此功能需要設置交易密碼才能繼續使用，是否立即前往？",
+        "type_country": "請選擇國家地區",
+        "type_real_name": "請輸入真實姓名",
+        "type_card_id": "請輸入證件號碼",
+        "up_card_front": "請上傳證件正面照片",
+        "up_card_back": "請上傳證件反面照片",
+        "up_face": "請上傳人像照片",
+        "moderated": "提交成功，請等待審核",
+        "type_old_pass": "請輸入原密碼",
+        "re_login": "修改成功，請重新登錄",
+        "type_feedback": "請輸入反饋內容",
+        "feed_success": "反饋成功",
+        "cancel_entrust": "取消委託成功",
+        "trade_success": "交易成功"
     },
     "title": {
-        "language_set": "语言设置"
+        "language_set": "語言設置"
     }
 }
