--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -9,8 +9,8 @@
         "email": "Электронная почта ",
         "enter_email": "Пожалуйста, введите свой адрес электронной почты",
         "email_code": "Код подтверждения электронной почты",
-        "enter_code": " Пожалуйста, введите проверочный код электронной почты",
-        "send_code": "Отправить проверочный код",
+        "enter_code": " код верификации",
+        "send_code": "Отправить",
         "before_pass": "Старый пароль для входа  ",
         "enter_before": "Пожалуйста, введите старый пароль для входа",
         "new_pass": "Новый пароль",
@@ -141,7 +141,7 @@
         "low": "Низкий",
         "push_op": "Добавить",
         "move_op": "Отменить",
-        "regis_welcome": "Регистрация в 80БиБи",
+        "regis_welcome": "Регистрация в БиБи",
         "enter_pass": "Пожалуйста введите пароль",
         "real_name": "Фамилия и имя ",
         "enter_real": "Пожалуйста, введите фамилию и имя",
@@ -222,7 +222,17 @@
         "has_no_address": "Нет адреса",
         "hint": "Подсказка",
         "has_no_data": "Нет доступных данных",
-        "inv_title": "Скидка на приглашение"
+        "inv_title": "Скидка на приглашение",
+        "id":"Я БЫ",
+        "no_content":"еще нет контента",
+        "recharge_fait":"Пополнение фиатной валюты",
+        "recharge_amount":"Сумма пополнения",
+        "recharge_protocol":"Пополнение в сети",
+        "type_recharge_amount":"Введите сумму пополнения",
+        "recharge_fait_remark":"Напоминание: пожалуйста, свяжитесь со службой поддержки онлайн после оплаты",
+        "next":"Следующий шаг",
+        "reject":"отклоненный",
+        "pay_away":"метод оплаты"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
@@ -259,9 +269,26 @@
         "cancel_optional": "Успешно отменено",
         "upload_success": "Загружено успешно",
         "type_trade_amount": "Пожалуйста, введите сумму транзакции",
-        "type_limit_amount": "Пожалуйста, введите лимит суммы"
+        "type_limit_amount": "Пожалуйста, введите лимит суммы",
+        "level":"уровень",
+        "total":"общий",
+        "enter_amount":"Пожалуйста, введите сумму пополнения"
     },
     "title": {
         "language_set": "Языковые настройки"
+    },
+    "invite":{
+        "rules":"Правила",
+        "invitation":"Приглашение",
+        "share":"Делиться",
+        "inv_code":"Код приглашения",
+        "share_link":"Реферальная ссылка",
+        "no":"No.",
+        "waiting":"Ожидающий",
+        "inv_more":"Пригласить друзей",
+        "save":"Нажмите и удерживайте, чтобы сохранить",
+        "share_to":"Поделиться с",
+        "code":"Код приглашения",
+        "enter_code":"Введите код приглашения(необязательно)"
     }
 }
