--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -232,7 +232,9 @@
         "recharge_fait_remark":"Напоминание: пожалуйста, свяжитесь со службой поддержки онлайн после оплаты",
         "next":"Следующий шаг",
         "reject":"отклоненный",
-        "pay_away":"метод оплаты"
+        "pay_away":"метод оплаты",
+        "limit_50":"Минимальная сумма депозита 50 USDT"
+
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
