--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -231,7 +231,9 @@
         "type_recharge_amount":"ใส่จำนวนเงินที่เติมเงิน",
         "recharge_fait_remark":"การแจ้งเตือน: กรุณาติดต่อฝ่ายบริการลูกค้าออนไลน์หลังการชำระเงิน",
         "next":"ขั้นตอนต่อไป",
-        "reject":"ถูกปฏิเสธ"
+        "reject":"ถูกปฏิเสธ",
+        "limit_50":"จำนวนเงินฝากขั้นต่ำ 50 USDT"
+        
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
